Update js imports

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -3,9 +3,9 @@
 
 <head>
   {{#if isProd }}
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138887970-4"></script>
-  <script type="text/javascript" src="/assets/js/ga.js"></script>
-  <script type="text/javascript" src="/assets/js/hotjar.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138887970-4"></script>
+    <script type="text/javascript" src="/assets/js/ga.js"></script>
+    <script type="text/javascript" src="/assets/js/hotjar.js"></script>
   {{/if }}
   <title>Hackney Education Document Upload</title>
   <meta charset="utf-8">
@@ -14,13 +14,12 @@
   <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/assets/css/bootstrap-nav.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap-extras.min.css" />
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap.min.css" />
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript" src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
 </head>
 
 <body>
