--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -11,12 +11,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hackney Document Uploads">
+  <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
   <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/assets/css/bootstrap-nav.min.css" />
-  <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="/assets/css/bootstrap-extras.min.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
 </head>
 
 <body>
