--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -1,27 +1,26 @@
 {{> header isProd=isProd feedbackFormUrl=feedbackFormUrl }}
 {{#if isStaff }}
 <a href="/dropboxes" data-testid="dropbox-list-return-link">
-  << Back to all dropboxes</a> {{/if }}
-    <div id="dropboxContents" data-testid="dropbox-details">
-      <strong>Child's name:</strong>
-      <p>{{ dropbox.customer.firstName }} {{ dropbox.customer.lastName }}</p>
-      <strong>Date of birth:</strong>
-      <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
-      <strong>Parent's email:</strong>
-      <p data-testid="parents-email-value">{{ dropbox.customer.parentsEmail }}</p>
-      <strong>Notes:</strong>
-      <p>{{ dropbox.description }}</p>
-      {{#if dropbox.hasUploads }}
-      <strong>Uploaded Documents:</strong>
-      <ol>
-        {{#each dropbox.uploads }}
-        <li>
-          <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
-          {{#if this.description }} - {{this.description}}{{/if }}
-        </li>
-        {{/each}}
-      </ol>
-      {{/if }}
+  << Back to all dropboxes</a> {{/if }} <div id="dropboxContents" data-testid="dropbox-details">
+    <strong>Child's name:</strong>
+    <p>{{ dropbox.customer.firstName }} {{ dropbox.customer.lastName }}</p>
+    <strong>Date of birth:</strong>
+    <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
+    <strong>Parent's email:</strong>
+    <p data-testid="parents-email-value">{{ dropbox.customer.parentsEmail }}</p>
+    <strong>Notes:</strong>
+    <p>{{ dropbox.description }}</p>
+    {{#if dropbox.hasUploads }}
+    <strong>Uploaded Documents:</strong>
+    <ol>
+      {{#each dropbox.uploads }}
+      <li>
+        <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
+        {{#if this.description }} - {{this.description}}{{/if }}
+      </li>
+      {{/each}}
+    </ol>
+    {{/if }}
     </div>
     <strong>Submitted on:</strong>
     <p>{{dateFormat dropbox.submitted}}</p>
@@ -64,8 +63,10 @@
     <a href="/restart" class="btn btn-block btn-lg btn-primary" role="button" id="startAgain">Start Again</a>
     {{/if }}
     <script>
-      $('#reject-button').click(() => {
-        $("#reject-form").attr("hidden", false)
-      })
+      if (document.querySelector('#reject-button')) {
+        document.querySelector('#reject-button').addEventListener('click', () => {
+          document.querySelector("#reject-form").removeAttribute("hidden")
+        })
+      }
     </script>
     {{> footer isStaff }}
