Add rejectionReason column back

--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -59,6 +59,7 @@
           <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
           <td>{{this.customer.parentsEmail}}</td>
           <td>{{this.description}}</td>
+          <td>{{this.rejectionReason}}</td>
         </tr>
         {{/if}}
         {{/each}}
