--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -64,7 +64,7 @@
   <section>
     <h2>2. Add your child's details:</h2>
     <p>Add the details of the child you are applying for and whose application these documents support</p>
-    <form action="" method="POST">
+    <form action="" method="POST" onsubmit="return validateDate();">
       <div class="form-group">
         <label for="firstName">Child’s first name</label>
         <input type="text" class="form-control" id="firstName" name="firstName" pattern=".*\S+.*"
@@ -77,8 +77,8 @@
       </div>
       <div class="form-group">
         <label for="dob">Child's date of birth</label>
-        <input type="date" class="form-control" id="dob" name="dob" placeholder="dd/mm/yyyy"
-          pattern="(^(((0[1-9]|1[0-9]|2[0-8])[\/](0[1-9]|1[012]))|((29|30|31)[\/](0[13578]|1[02]))|((29|30)[\/](0[4,6,9]|11)))[\/](19|[2-9][0-9])\d\d$)|(^29[\/]02[\/](19|[2-9][0-9])(00|04|08|12|16|20|24|28|32|36|40|44|48|52|56|60|64|68|72|76|80|84|88|92|96)$)"
+        <span id="dobError" class="error" hidden>Please enter a valid date</span>
+        <input type="date" class="form-control" id="dob" name="dob" placeholder="dd/mm/yyyy" oninput="clearValidate()"
           required />
       </div>
       <div class="form-group">
@@ -93,6 +93,20 @@
         <button type="submit" id="submitDropbox" class="btn btn-block btn-lg btn-primary">Submit Documents</button>
       </div>
     </form>
+    <script type="text/javascript">
+      function validateDate() {
+        const dob = document.querySelector('#dob');
+        if (!(/(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))/.test(dob.value))) {
+          dob.focus();
+          document.querySelector('#dobError').hidden = false;
+          return false;
+        }
+        return true;
+      }
+      function clearValidate() {
+        document.querySelector('#dobError').hidden = true;
+      }
+    </script>
   </section>
 {{/if }}
 {{> footer isStaff=false }}
