--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -15,23 +15,21 @@
           <th scope="col">Child's name</th>
           <th scope="col">Date of birth</th>
           <th scope="col">Parent's email</th>
-          <th scope="col">Notes</th>
         </tr>
       </thead>
       <tbody data-testid="staff-dropboxes-list">
         {{#each dropboxes}}
-        {{#unless this.archived}}
-        <tr>
-          <td scope="row">
-            <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
-              {{this.customer.firstName}} {{this.customer.lastName}}
-            </a>
-          </td>
-          <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
-          <td>{{this.customer.parentsEmail}}</td>
-          <td>{{this.description}}</td>
-        </tr>
-        {{/unless}}
+          {{#unless this.archived}}
+            <tr>
+              <td scope="row">
+                <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
+                  {{this.customer.firstName}} {{this.customer.lastName}}
+                </a>
+              </td>
+              <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
+              <td>{{this.customer.parentsEmail}}</td>
+            </tr>
+          {{/unless}}
         {{/each}}
       </tbody>
     </table>
@@ -43,25 +41,23 @@
           <th scope="col">Child's name</th>
           <th scope="col">Date of birth</th>
           <th scope="col">Parent's email</th>
-          <th scope="col">Notes</th>
           <th scope="col">Reason for rejection</th>
         </tr>
       </thead>
       <tbody data-testid="staff-dropboxes-list">
         {{#each dropboxes}}
-        {{#if this.archived}}
-        <tr>
-          <td scope="row">
-            <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
-              {{this.customer.firstName}} {{this.customer.lastName}}
-            </a>
-          </td>
-          <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
-          <td>{{this.customer.parentsEmail}}</td>
-          <td>{{this.description}}</td>
-          <td>{{this.rejectionReason}}</td>
-        </tr>
-        {{/if}}
+          {{#if this.archived}}
+            <tr>
+              <td scope="row">
+                <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
+                  {{this.customer.firstName}} {{this.customer.lastName}}
+                </a>
+              </td>
+              <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
+              <td>{{this.customer.parentsEmail}}</td>
+              <td>{{this.rejectReason}}</td>
+            </tr>
+          {{/if}}
         {{/each}}
       </tbody>
     </table>
@@ -69,12 +65,8 @@
 </div>
 </div>
 <script>
-  $(document).ready(function () {
-    $('#unarchived-table').DataTable({
-      "aoColumnDefs": [
-        { "bSortable": false, "aTargets": [3] },
-      ]
-    });
+  $(function () {
+    $('#unarchived-table').DataTable();
     $('#archived-table').DataTable({
       "aoColumnDefs": [
         { "bSortable": false, "aTargets": [3] },
