Add submitted date to the dropbox list (#20)

--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -15,21 +15,23 @@
           <th scope="col">Child's name</th>
           <th scope="col">Date of birth</th>
           <th scope="col">Parent's email</th>
+          <th scope="col">Submitted</th>
         </tr>
       </thead>
       <tbody data-testid="staff-dropboxes-list">
         {{#each dropboxes}}
-          {{#unless this.archived}}
-            <tr>
-              <td scope="row">
-                <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
-                  {{this.customer.firstName}} {{this.customer.lastName}}
-                </a>
-              </td>
-              <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
-              <td>{{this.customer.parentsEmail}}</td>
-            </tr>
-          {{/unless}}
+        {{#unless this.archived}}
+        <tr>
+          <td scope="row">
+            <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
+              {{this.customer.firstName}} {{this.customer.lastName}}
+            </a>
+          </td>
+          <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
+          <td>{{this.customer.parentsEmail}}</td>
+          <td>{{dateFormatNoTime this.submitted}}</td>
+        </tr>
+        {{/unless}}
         {{/each}}
       </tbody>
     </table>
@@ -41,23 +43,25 @@
           <th scope="col">Child's name</th>
           <th scope="col">Date of birth</th>
           <th scope="col">Parent's email</th>
+          <th scope="col">Submitted</th>
           <th scope="col">Reason for rejection</th>
         </tr>
       </thead>
       <tbody data-testid="staff-dropboxes-list">
         {{#each dropboxes}}
-          {{#if this.archived}}
-            <tr>
-              <td scope="row">
-                <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
-                  {{this.customer.firstName}} {{this.customer.lastName}}
-                </a>
-              </td>
-              <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
-              <td>{{this.customer.parentsEmail}}</td>
-              <td>{{this.rejectReason}}</td>
-            </tr>
-          {{/if}}
+        {{#if this.archived}}
+        <tr>
+          <td scope="row">
+            <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
+              {{this.customer.firstName}} {{this.customer.lastName}}
+            </a>
+          </td>
+          <td data-testid="dob">{{dateFormatNoTime this.customer.dob}}</td>
+          <td>{{this.customer.parentsEmail}}</td>
+          <td>{{dateFormatNoTime this.submitted}}</td>
+          <td>{{this.rejectReason}}</td>
+        </tr>
+        {{/if}}
         {{/each}}
       </tbody>
     </table>
@@ -66,11 +70,11 @@
 </div>
 <script>
   $(function () {
-    $('#unarchived-table').DataTable();
+    $('#unarchived-table').DataTable({
+      "order": []
+    });
     $('#archived-table').DataTable({
-      "aoColumnDefs": [
-        { "bSortable": false, "aTargets": [3] },
-      ]
+      "order": []
     });
   });
 </script>
