--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -1,5 +1,5 @@
 {{> header isProd=isProd feedbackFormUrl=feedbackFormUrl }}
-<h2>Customer Uploads</h2>
+<h2>Customer uploads</h2>
 <ul class="nav nav-tabs">
   <li class="active"><a href="#dropboxes-to-review" data-toggle="tab" data-testid="dropboxes-to-review-test">Dropboxes
       to review
