--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -3,9 +3,9 @@
 <footer>
   <div class="container">
     {{#if isStaff }}
-      <a href="/logout">Logout</a>
+    <a href="/logout">Logout</a>
     {{else}}
-      <a href="/dropboxes">Staff Login</a>
+    <a href="/dropboxes">Staff login</a>
     {{/if }}
   </div>
 </footer>
