--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -5,7 +5,7 @@
   <p>Upload documents one at a time, and describe what each one is.
   </p>
   {{#if dropbox.hasUploads }}
-  <h3>Your uploaded Documents:</h3>
+  <h3>Your uploaded documents:</h3>
   <ul id="uploads">
     {{#each dropbox.uploads }}
     <li>
