--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -5,38 +5,38 @@
   <p>Upload documents one at a time, and describe what each one is.
   </p>
   {{#if dropbox.hasUploads }}
-    <h3>Your uploaded Documents:</h3>
-    <ul id="uploads">
-      {{#each dropbox.uploads }}
-        <li>
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-                {{inc @index}}.
-              </div>
-              <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9 col-xl-9">
-                <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
-                {{#if this.description }} - {{this.description}}{{/if }}
-              </div>
-              <div>
-                <form method="POST" action="/dropboxes/{{ ../dropboxId }}/files/{{ this.id }}"
-                  onSubmit="javascript: return confirm('Are you sure you want to delete this document?');">
-                  <input type="hidden" name="_method" value="DELETE" />
-                  <button class="btn btn-danger">Delete</button>
-                </form>
-              </div>
-            </div>
+  <h3>Your uploaded documents:</h3>
+  <ul id="uploads">
+    {{#each dropbox.uploads }}
+    <li>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+            {{inc @index}}.
           </div>
-        </li>
-      {{/each}}
-    </ul>
-    <hr>
-    <h3>Add another document:</h3>
+          <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9 col-xl-9">
+            <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
+            {{#if this.description }} - {{this.description}}{{/if }}
+          </div>
+          <div>
+            <form method="POST" action="/dropboxes/{{ ../dropboxId }}/files/{{ this.id }}"
+              onSubmit="javascript: return confirm('Are you sure you want to delete this document?');">
+              <input type="hidden" name="_method" value="DELETE" />
+              <button class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </li>
+    {{/each}}
+  </ul>
+  <hr>
+  <h3>Add another document:</h3>
   {{/if }}
   <form action="{{ secureUploadUrl }}" method="POST" enctype="multipart/form-data">
     <div class="form-group">
       {{#each secureUploadFields}}
-        <input type="hidden" name="{{@key}}" value="{{this}}" />
+      <input type="hidden" name="{{@key}}" value="{{this}}" />
       {{/each}}
       <input type="hidden" name="key" value="{{dropboxId}}/{{secureDocumentId}}/${filename}" />
       <input type="hidden" name="X-Amz-Server-Side-Encryption" value="AES256" />
@@ -44,9 +44,9 @@
         <label for="x-amz-meta-description">What is this document?</label>
         <select class="form-control" id="x-amz-meta-description" name="x-amz-meta-description"
           data-testid="doc-description">
-          <option>Council Tax letter</option>
-          <option>Proof of Address</option>
-          <option>Proof of Birth</option>
+          <option>Council tax letter</option>
+          <option>Proof of address</option>
+          <option>Proof of birth</option>
           <option>Other</option>
         </select>
       </div>
@@ -55,58 +55,58 @@
       <input type="file" class="form-control" id="file" name="file" required />
     </div>
     <div class="form-group">
-      <button type="submit" id="uploadFile" class="btn btn-block btn-lg btn-primary">Upload Document</button>
+      <button type="submit" id="uploadFile" class="btn btn-block btn-lg btn-primary">Upload document</button>
     </div>
   </form>
   <script type="text/javascript" src="/assets/js/setContentType.js"></script>
 </section>
 {{#if dropbox.hasUploads }}
-  <section>
-    <h2>2. Add your child's details:</h2>
-    <p>Add the details of the child you are applying for and whose application these documents support</p>
-    <form action="" method="POST" onsubmit="return validateDate();">
-      <div class="form-group">
-        <label for="firstName">Child’s first name</label>
-        <input type="text" class="form-control" id="firstName" name="firstName" pattern=".*\S+.*"
-          title="First name can not be empty" required />
-      </div>
-      <div class="form-group">
-        <label for="lastName">Child’s last name</label>
-        <input type="text" class="form-control" id="lastName" name="lastName" pattern=".*\S+.*"
-          title="Last name can not be empty" required />
-      </div>
-      <div class="form-group">
-        <label for="dob">Child's date of birth</label>
-        <span id="dobError" class="error" hidden>Please enter a valid date</span>
-        <input type="date" class="form-control" id="dob" name="dob" placeholder="dd/mm/yyyy" oninput="clearValidate()"
-          required />
-      </div>
-      <div class="form-group">
-        <label for="parentsEmail">Parent's email</label>
-        <input type="email" class="form-control" id="parentsEmail" name="parentsEmail" required />
-      </div>
-      <div class="form-group top-border">
-        <label for="description">Notes</label>
-        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-      </div>
-      <div class="form-group">
-        <button type="submit" id="submitDropbox" class="btn btn-block btn-lg btn-primary">Submit Documents</button>
-      </div>
-    </form>
-    <script type="text/javascript">
-      function validateDate() {
-        const dob = document.querySelector('#dob');
-        if (!(/(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))/.test(dob.value))) {
-          dob.focus();
-          document.querySelector('#dobError').hidden = false;
-          return false;
-        }
-        return true;
+<section>
+  <h2>2. Add your child's details:</h2>
+  <p>Add the details of the child you are applying for and whose application these documents support</p>
+  <form action="" method="POST" onsubmit="return validateDate();">
+    <div class="form-group">
+      <label for="firstName">Child’s first name</label>
+      <input type="text" class="form-control" id="firstName" name="firstName" pattern=".*\S+.*"
+        title="First name can not be empty" required />
+    </div>
+    <div class="form-group">
+      <label for="lastName">Child’s last name</label>
+      <input type="text" class="form-control" id="lastName" name="lastName" pattern=".*\S+.*"
+        title="Last name can not be empty" required />
+    </div>
+    <div class="form-group">
+      <label for="dob">Child's date of birth</label>
+      <span id="dobError" class="error" hidden>Please enter a valid date</span>
+      <input type="date" class="form-control" id="dob" name="dob" placeholder="dd/mm/yyyy" oninput="clearValidate()"
+        required />
+    </div>
+    <div class="form-group">
+      <label for="parentsEmail">Parent's email</label>
+      <input type="email" class="form-control" id="parentsEmail" name="parentsEmail" required />
+    </div>
+    <div class="form-group top-border">
+      <label for="description">Notes</label>
+      <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+    </div>
+    <div class="form-group">
+      <button type="submit" id="submitDropbox" class="btn btn-block btn-lg btn-primary">Submit documents</button>
+    </div>
+  </form>
+  <script type="text/javascript">
+    function validateDate() {
+      const dob = document.querySelector('#dob');
+      if (!(/(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))/.test(dob.value))) {
+        dob.focus();
+        document.querySelector('#dobError').hidden = false;
+        return false;
       }
-      function clearValidate() {
-        document.querySelector('#dobError').hidden = true;
-      }
-    </script>
-  </section>
+      return true;
+    }
+    function clearValidate() {
+      document.querySelector('#dobError').hidden = true;
+    }
+  </script>
+</section>
 {{/if }}
 {{> footer isStaff=false }}
