--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -23,7 +23,7 @@
         {{#unless this.archived}}
         <tr>
           <td scope="row">
-            <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
+            <a class="dropbox-link" data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
               {{this.customer.firstName}} {{this.customer.lastName}}
             </a>
           </td>
