Fix footer for staff /view

--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -73,4 +73,4 @@
   const rejectForm = document.querySelector("#reject-form");
   if (rejectButton) rejectButton.addEventListener('click', () => rejectForm.removeAttribute("hidden"));
 </script>
-{{> footer isStaff }}
+{{> footer isStaff=isStaff }}
