Add responsivness to the dropbox list

--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -71,7 +71,8 @@
 <script>
   $(function () {
     $('#unarchived-table').DataTable({
-      "order": []
+      "order": [],
+      responsive: true
     });
     $('#archived-table').DataTable({
       "order": []
